clang/test/BSC/Negative/Ownership/RuleCheck/func-call/func-call.cbs
// RUN: %clang_cc1 -verify %s

int * _Owned IntPtrOwned() {
	int * _Owned a;
	return a; // expected-error {{use of uninitialized value: `a`}}
}

void func1() {
	int * _Owned a = IntPtrOwned();
	int * _Owned b = a;
	int * _Owned c = a; // expected-error {{use of moved value: `a`}}
} // expected-error {{memory leak of value: `c`}} expected-error {{memory leak of value: `b`}}

void callee1(int * _Owned a, int * _Owned b) {
	int c = 1;
} // expected-error {{memory leak of value: `a`}} expected-error {{memory leak of value: `b}}

void caller1(int * _Owned a, int * _Owned b) {
	callee1(a, b);
}

void caller2(int * _Owned a, int * _Owned b) {
	callee1(a, b);
	callee1(a, b); // expected-error {{use of moved value: `a`}} expected-error {{use of moved value: `b`}}
}

void caller3(int * _Owned a, int * _Owned b) {
	callee1(a, b);
	int * _Owned c = a; // expected-error {{use of moved value: `a`}}
} // expected-error {{memory leak of value: `c`}}

void caller4(int * _Owned a) {
	int * _Owned b;
	callee1(a, b); // expected-error {{use of uninitialized value: `b`}}
}

void caller5(int * _Owned a, int * _Owned b) {
	int * _Owned c = a;
	callee1(a, b); // expected-error {{use of moved value: `a`}}
} // expected-error {{memory leak of value: `c`}}

int * _Owned IntPtrOwned1() {
	int num = 1;
	int * _Owned a = (int * _Owned)&num;
	return a;
}

int * _Owned IntPtrOwned2(int * _Owned a) {
	return a;
}

void caller6(int * _Owned a) {
	int * _Owned b = IntPtrOwned2(a);
} // expected-error {{memory leak of value: `b`}}

struct A {
	int * _Owned a;
	int * _Owned b;
};

void callee2(int * _Owned a, int * _Owned b) {
	int c = 1;
} // expected-error {{memory leak of value: `a`}} expected-error {{memory leak of value: `b`}}

void func10(struct A a) {
	callee2(a.a, a.b);
}

struct B {
	int * _Owned a;
	int * _Owned b;
};

void func11(struct B b) {
	callee1(b.a, b.b);
}